fix clipping descenders

--- a/apps/client/src/features/viewers/timer/Timer.scss
+++ b/apps/client/src/features/viewers/timer/Timer.scss
@@ -80,7 +80,7 @@
 
     width: 100%;
     overflow: hidden;
-    
+
     .end-message {
       text-align: center;
       font-size: 11.5vw;
@@ -123,11 +123,11 @@
     color: var(--external-color-override, $external-color);
     letter-spacing: 0.5px;
     line-height: 0.9em;
-
+    padding-bottom: 0.2em;
     transition-property: opacity, height;
     transition-duration: $viewer-transition-time;
     border-top: 1px solid rgba(white, 0.1);
-  
+
     &--hidden {
       opacity: 0;
       height: 0;
@@ -141,11 +141,11 @@
     opacity: 1;
     transition: $viewer-transition-time;
 
-  &--paused {
-    opacity: $viewer-opacity-disabled;
-    transition: $viewer-transition-time;
+    &--paused {
+      opacity: $viewer-opacity-disabled;
+      transition: $viewer-transition-time;
+    }
   }
-}
 
   /* =================== OVERLAY ===================*/
 
